#
# Copyright (C) 2025 Chris Caron <lead2gold@gmail.com>
# All rights reserved.
#
# This code is licensed under the MIT License.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files(the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions :
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apprise-api"
version = "1.2.1"
authors = [{ name = "Chris Caron", email = "lead2gold@gmail.com" }]
license = "MIT"
dependencies = [
  "apprise == 1.9.4",
  "django",
  "gevent",
  "gunicorn",
  "requests",
  "paho-mqtt < 2.0.0",
  "gntp",
  "cryptography",
  "django-prometheus"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "ruff",
  "tox",
  "mock"
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apprise_api*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.pytest"
addopts = "--ignore=lib --ignore=lib64 --nomigrations --cov=apprise_api --cov-report=term-missing"
filterwarnings = ["once::Warning"]
testpaths = ["apprise_api"]

[tool.coverage.run]
branch = true
source = ["apprise_api"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 160
exclude = [".eggs", ".tox", "__pycache__"]
builtins = ["_"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741", "E722"]
