[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[flake8]
# We exclude packages we don't maintain
exclude = .eggs,.tox
ignore = E741,E722,W503,W504,W605
statistics = true
builtins = _
max-line-length = 160

[aliases]
test=pytest

[tool:pytest]
DJANGO_SETTINGS_MODULE = core.settings.pytest
addopts = --ignore=lib --ignore=lib64 --nomigrations --cov=apprise_api --cov-report=term-missing
filterwarnings =
	once::Warning
